--- a/ParkinglotDemo/index.html
+++ b/ParkinglotDemo/index.html
@@ -31,6 +31,7 @@
 
 <script src="_js/angular.min.js"></script>
 <script src="_js/angular-route.min.js"></script>
+<script src="_js/jquery-1.11.3.min.js"></script>
 <script src="_js/bootstrap.min.js"></script>
 <script src="_js/app.js"></script>
 </body>
