--- a/ParkinglotDemo/home.html
+++ b/ParkinglotDemo/home.html
@@ -12,18 +12,18 @@
 				<tr ng-repeat="lot in lots">
 					<td>{{lot.name}}</td>
 					<td>{{lot.totalSpace}}</td>
-					<td><a href="#myModal" data-toggle="modal" class="btn btn-warning" ng-click="setLot(lot.id)">Details</a><td>
+					<td><a href="#lotNumber" data-toggle="modal" class="btn btn-warning" ng-click="setLot(lot.id)">Details</a><td>
 				</tr>
 			</tbody>
 		</table>
 		<hr>
 		<!--modal to display lane board-->
-		<div class="modal fade" id="myModal">
+		<div class="modal fade" id="lotNumber">
 			<div class="modal-dialog">
 				<div class="modal-content">
 					<div class="modal-header">
 						<button type="button" class="close" data-dismiss="modal">&times;</button>
-						<h3 class="modal-title">Lane Board</h3>
+						<h3 class="modal-title">Lane Board <small>For Lot Number {{lotId + 1}}</small></h3>
 					</div>
 					<div class="modal-body">
 						<table class="table table-striped">
