--- a/part2/ParkinglotDemo/index.html
+++ b/part2/ParkinglotDemo/index.html
@@ -19,7 +19,7 @@
 			<div class="collapse navbar-collapse">
 				<ul class="nav navbar-nav pull-right">
 					<li class="active"><a href="#">Home</a></li>
-					<li><a href="#">About</a></li>
+					<!--<li><a href="#">About</a></li>-->
 				</ul>
 			</div>
 		</div>
